# branchnote

./: .gitattributes  .gitignore  LICENSE  README.md  brief.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs.rs  git.rs  lib.rs  main.rs  specs.rs  watcher.rs
src/components/: ConfirmDialog.tsx  EditorPane.tsx  GitPanel.tsx  GraphView.tsx  Onboarding.tsx  PreviewPane.tsx  ProjectSwitcher.tsx  QuickOpen.tsx  Rail.tsx  Settings.tsx  Sidebar.tsx  SpecsPanel.tsx  SpecsView.tsx  StartView.tsx  StatusBar.tsx  TabBar.tsx  TemplatePicker.tsx  TitleBar.tsx  Toast.tsx  TraceabilityView.tsx
src/lib/: editorTheme.ts  format.ts  git.ts  gitTree.ts  graph.ts  menuNav.ts  specs.ts  tasks.ts  templates.ts  theme.ts  tree.ts  ui.ts  wikilinks.ts  workspace.ts
