[package]
name = "branchnote"
version = "0.1.0"
description = "Minimal local-first markdown workspace"
authors = ["Branchnote contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "branchnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
notify = "8"
notify-debouncer-full = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
# Windows-only target today; add apple-native / sync-secret-service when porting.
keyring = { version = "3", features = ["windows-native"] }
# Blocking HTTP client for the GitHub OAuth device flow (webview fetch to
# github.com is CORS-blocked, so the calls live in Rust). rustls TLS by default.
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
